[package]
name = "disco"
version = "0.1.2"
edition = "2018"
authors = ["omu <omurice11@gmail.com>"]

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
anyhow = "1.0"
structopt = "0.3"
chrono = "0.4"
dirs = "3.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "multipart"] }
